# GCPrior

./: .gitignore  .gitmodules  .pylintrc  ablation.sh  calvin_eda.ipynb  carla.ipynb  carla_dataset.py  env.py  environment.yaml  error.pt  evaluate.py  expert.py  find_big_file.sh  hrl_gc_prompt.py  hrl_gc_skimo.py  hrl_gcid.py  hrl_gcid_joint.py  hrl_skimo.py  hrl_skimo_1.py  hrl_skimo_2.py  hrl_spirl.py  hrl_spirl_gcpretrained.py  install.sh  pretrained.pt  pyproject.toml  refactoring.ipynb  requirements.txt  results.csv  setup.py  simpl.sh  spirl.txt  task_prob_missing.csv  test.py  train.py  train.sh  train_gcid.py  train_wae.py  utils.py
LVD/: env_vis.py  evaluate.py  prep_maze.py  prep_maze_2phase.py  prep_maze_mp.py  utils.py
carla_env/: base.py  behavior_cloning.py  collect_data.py  dataset.py  weathers.py
collector/: caespirl.py  gc.py  gcid.py  spirl.py  storage.py
configs/: base_config.py  data_collecting.yaml  default.yaml  learning.yaml
contrib/: dists.py  momentum_encode.py
envs/: base.py
logs/: log0.txt  log1.txt  log10.txt  log11.txt  log17.txt  log18.txt  log19.txt  log2.txt  log20.txt  log21.txt  log22.txt  log23.txt  log24.txt  log25.txt  log26.txt  log27.txt  log29.txt  log30.txt  log31.txt  log32.txt  log35.txt  log36.txt  log37.txt  log38.txt  log39.txt  log40.txt  log41.txt  log42.txt  log43.txt  log45.txt  log46.txt  log47.txt  log48.txt  log49.txt  log5.txt  log50.txt  log51.txt  log52.txt  log53.txt  log54.txt  (+15 more)
models/: gcid.py  gcid_ssl.py  spirl_easy.py
modules/: base.py  subnetworks.py
offline_baselines_jax/: __init__.py
(+2220 files in other folders)
