[tool.poetry]
name = "carla_env"
version = "0.1.0"
description = "My Project"
authors = ["Jinwoo Jang <jinustar@g.skku.edu>"]
packages = [
    { include = "carla_env", from = "." },
    { include = "carla_env.*", from = "." },
]

[tool.poetry.dependencies]
python = "^3.7"
carla = "0.9.13"
numpy = "*"
dotmap = "*"
"gym" = { version = "*", extras = ["box2d"] }
networkx = "*"
opencv-python = "*"
stable-baselines3 = "*"
tensorboard = "*"
tensorflow-probability = "*"
tqdm = "*"
typing-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportImplicitOverride = true
